--- a/themePackage/skin/frontend/bootstrap/default/scss/styles.scss
+++ b/themePackage/skin/frontend/bootstrap/default/scss/styles.scss
@@ -38,6 +38,7 @@ $brand-danger:          #d9534f;
 
 // Eine neue Farbe für den "Add to cart" Button
 $brand-buy:             #b368d6 !default;
+$brand-base:            #ffffff !default;
 //-------------------
 
 // Reset and dependencies
